Add Unit and User Views

--- a/RgpWeb/appsettings.json
+++ b/RgpWeb/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "RgpConnection": "Server=.;Database=rgp;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
