Change User to Owner

--- a/RgpWeb/RgpWeb.csproj
+++ b/RgpWeb/RgpWeb.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <Folder Include="Views\Unit\" />
-    <Folder Include="Views\User\" />
+    <Folder Include="Views\Owner\" />
   </ItemGroup>
 
 </Project>
