--- a/RgpWeb/appsettings.json
+++ b/RgpWeb/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "RgpConnection": "Server=.;Database=rgp;Trusted_Connection=True;"
+    "RgpConnection": "Server=.;Database=land-owners;Trusted_Connection=True;"
   },
   "AllowedHosts": "*"
 }
