--- a/RgpWeb/RgpWeb.csproj
+++ b/RgpWeb/RgpWeb.csproj
@@ -17,8 +17,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Views\Property\" />
     <Folder Include="Views\Unit\" />
-    <Folder Include="Views\Owner\" />
   </ItemGroup>
 
 </Project>
